--- a/unit_8/8/index.html
+++ b/unit_8/8/index.html
@@ -21,45 +21,55 @@
 				<h1 id="title">Product Designer</h1>
 				<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
 	<!-- Why is the a cta class and not a button tag? -->
-				<a href="#" class="cta">LEARN MORE</a>
+				<a href="#about-me" class="primarybutton">LEARN MORE</a>
 			</section>
 		</div>
 		<section id="about-me">
 			<h2>About Me</h2>
 			<p>Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
 			<ul>
-				<li>Strategy</li>
+				<li>Product Strategy</li>
 				<li>User Research</li>
 				<li>Competitive Analysis</li>
 				<li>Sketching</li>
-				<li>Prototyping</li>
+				<li>Feature Prioritization</li>
 				<li>High Fildeity Mock-ups</li>
+				<li>Prototyping</li>
+				<li>User Testing</li>
 				<li>User-Centered Design</li>
 				<li>Lean Methodology</li>
-				<li>Agile Process</li>
+				<li>Agile XP</li>
 			</ul>
 		</section>
 		<section id="work" class="clearfix">
 			<h2>Work</h2>
 			<article id="coldwell">
 				<h3>Coldwell Banker</h3>
-				<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
-				<a href="#" class="cta">See Project</a>
+					<div id="projectborder">
+						<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
+						<a href="#" class="secondarybutton">See Project</a>
+					</div>
 			</article>
 		<article id="liquidlab"> 
 				<h3>Liquid Lab</h3>
-				<p>A website that provides quick access to juice recipes and information for health conscious users for juice recipes and information.</p>
-				<a href="#" class="cta">See Project</a>
+				<div id="projectborder">
+					<p>A website that provides quick access to juice recipes and information for health conscious users for juice recipes and information.</p>
+					<a href="#" class="secondarybutton">See Project</a>
+				</div>
 			</article>
 			<article id="dotdash3">
 				<h3>Dot Dash 3</h3>
-				<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
-				<a href="#" class="cta">See Project</a>
+				<div id="projectborder">
+					<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
+					<a href="#" class="secondarybutton">See Project</a>
+				</div>
 			</article>
 			<article class="instgram">
 				<h3>Instagram Print</h3>
-				<p>A reinvisioning of Instagram to include a print feature.</p>
-				<a href="#" class="cta">See Project</a>
+				<div id="projectborder">
+					<p>A reinvisioning of Instagram to include a print feature.</p>
+					<a href="#" class="secondarybutton">See Project</a>
+				</div>
 			</article>
 		</article>
 		
