--- a/unit_8/8/index.html
+++ b/unit_8/8/index.html
@@ -11,12 +11,12 @@
 			<section id="hero">
 				<header>
 					<p class="logo">ROXANNE MUSTAFA</p>
-				<nav>
-					<a href="#about-me">About Me</a>
-					<a href="#work">Work</a>
-					<a href="#downloads">Downloads</a>
-					<a href="#contact">Contacts</a>
-				</nav>
+					<nav>
+						<a href="#about-me">About</a>
+						<a href="#work">Work</a>
+						<a href="#downloads">Downloads</a>
+						<a href="#contact">Contacts</a>
+					</nav>
 			</header>	
 				<h1 id="title">Product Designer</h1>
 				<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
@@ -24,8 +24,8 @@
 				<a href="#about-me" class="primarybutton">LEARN MORE</a>
 			</section>
 		</div>
-		<section id="about-me">
-			<h2>About Me</h2>
+		<section id="about">
+			<h2>About</h2>
 			<p>Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
 			<ul>
 				<li>Product Strategy</li>
@@ -39,32 +39,33 @@
 				<li>User-Centered Design</li>
 				<li>Lean Methodology</li>
 				<li>Agile XP</li>
+				<li>Front-End Code</li>
 			</ul>
 		</section>
 		<section id="work" class="clearfix">
 			<h2>Work</h2>
-			<article id="coldwell">
+			<article id="proj1">
 				<h3>Coldwell Banker</h3>
 					<div id="projectborder">
 						<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
 						<a href="#" class="secondarybutton">See Project</a>
 					</div>
 			</article>
-		<article id="liquidlab"> 
+		<article id="proj2"> 
 				<h3>Liquid Lab</h3>
 				<div id="projectborder">
 					<p>A website that provides quick access to juice recipes and information for health conscious users for juice recipes and information.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
 			</article>
-			<article id="dotdash3">
+			<article id="proj3">
 				<h3>Dot Dash 3</h3>
 				<div id="projectborder">
 					<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
 			</article>
-			<article class="instgram">
+			<article class="proj4">
 				<h3>Instagram Print</h3>
 				<div id="projectborder">
 					<p>A reinvisioning of Instagram to include a print feature.</p>
@@ -81,9 +82,11 @@
 
 		<section id="contact">
 			<h2>Contact</h2>
-			<a href="www.linkedin.com" target="_blank">Linkedin</a>
-			<a href="www.twitter.com" target="_blank">Twiter</a>
-			<a href="mustrock@gmail.com" target="_blank">Email</a>
+			<p>Reach me at 
+			<a href="www.linkedin.com" target="_blank">Linkedin</a>,
+			<a href="www.twitter.com" target="_blank">Twitter</a> or via
+			<a href="mustrockux@gmail.com" target="_blank">Email</a>
+			</p>
 		</section>	
 		<footer>
 			<p>&copy; Roxanne Mustafa</p>
