--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -6,26 +6,6 @@
 	<title>Roxanne Mustafa</title>
 </head>
 <body>
-<<<<<<< HEAD
-	<div class="wrapper">
-		<div id="heroborder">
-			<section id="hero">
-				<header>
-					<p class="logo">ROXANNE MUSTAFA</p>
-					<nav>
-						<a href="#about-me">About</a>
-						<a href="#work">Work</a>
-						<a href="#downloads">Downloads</a>
-						<a href="#contact">Contacts</a>
-					</nav>
-			</header>	
-				<h1 id="title">Product Designer</h1>
-				<h2 id="byline">Product Predator. Pack Designer.<br>Insatiable She-Wolf.</h2>
-	<!-- Why is the a cta class and not a button tag? -->
-				<a href="#about-me" class="primarybutton">LEARN MORE</a>
-			</section>
-		</div>
-=======
 	<div id="heroborder">
 		<section id="hero">
 			<header>
@@ -43,7 +23,6 @@
 		</section>
 	</div>
 	<div class="wrapper">	
->>>>>>> parent of 391a4a1... update? y
 		<section id="about">
 			<h2>About</h2>
 			<p>Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
@@ -62,89 +41,48 @@
 				<li>Front-End Code</li>
 			</ul>
 		</section>
-		<section id="work" class="clearfix">
-			<h2>Work</h2>
-			<section id="proj1">
-				<h3>Coldwell Banker</h3>
-					<div id="projectborder">
-						<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
-						<a href="#" class="secondarybutton">See Project</a>
-					</div>
-<<<<<<< HEAD
-			</section>
+			<section id="work">
+				<h2>Work</h2>
+				<section id="projects">
+					<section id="proj1">
+						<h3>Coldwell Banker</h3>
+							<div id="projectborder">
+								<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
+								<a href="#" class="secondarybutton">See Project</a>
+							</div>
+					</section>
 
-			<section id="proj2"> 
-=======
-			</article>
-<<<<<<< HEAD
-		<article id="proj2"> 
-=======
+					<section id="proj2"> 
+						<h3>Liquid Lab</h3>
+						<div id="projectborder">
+							<p>A website that provides quick access to juice recipes and information for health conscious users for juice recipes and information.</p>
+							<a href="#" class="secondarybutton">See Project</a>
+						</div>
+					</section>
+					<section id="proj3">
+						<h3>Dot Dash 3</h3>
+						<div id="projectborder">
+							<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
+							<a href="#" class="secondarybutton">See Project</a>
+						</div>
+					</section>
 
-			<article id="proj2"> 
->>>>>>> parent of 391a4a1... update? y
->>>>>>> origin/master
-				<h3>Liquid Lab</h3>
-				<div id="projectborder">
-					<p>A website that provides quick access to juice recipes and information for health conscious users for juice recipes and information.</p>
-					<a href="#" class="secondarybutton">See Project</a>
-				</div>
-<<<<<<< HEAD
-			</section>
-
-			<section id="proj3">
-=======
-			</article>
-<<<<<<< HEAD
-=======
-
->>>>>>> parent of 391a4a1... update? y
-			<article id="proj3">
->>>>>>> origin/master
-				<h3>Dot Dash 3</h3>
-				<div id="projectborder">
-					<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
-					<a href="#" class="secondarybutton">See Project</a>
-				</div>
-<<<<<<< HEAD
-			</section>
-
-			<section class="proj4">
-=======
-			</article>
-<<<<<<< HEAD
-=======
-
->>>>>>> parent of 391a4a1... update? y
-			<article class="proj4">
->>>>>>> origin/master
-				<h3>Instagram Print</h3>
-				<div id="projectborder">
-					<p>A reinvisioning of Instagram to include a print feature.</p>
-					<a href="#" class="secondarybutton">See Project</a>
-				</div>
-<<<<<<< HEAD
-			</section>
-=======
-			</article>
-<<<<<<< HEAD
-		</article>
-		
-		<section id="downloads" class="clearfix">
-			<h2>Downloads</h2>
-			<p>Download full pdf <a href="#">here</a>.</p>
-			<!-- how to fix this anchor tag which is set to white in the css for the nav element -->
+					<section class="proj4">
+						<h3>Instagram Print</h3>
+						<div id="projectborder">
+							<p>A reinvisioning of Instagram to include a print feature.</p>
+							<a href="#" class="secondarybutton">See Project</a>
+						</div>
+					</section>
+				</section>		
+			</section>					
 		</section>
-
-=======
->>>>>>> origin/master
-
 			<section id="downloads" class="clearfix">
 				<h2>Downloads</h2>
 				<p>Download full pdf <a href="#">here</a>.</p>
-				<!-- how to fix this anchor tag which is set to white in the css for the nav element -->
 			</section>
-	
->>>>>>> parent of 391a4a1... update? y
+		</section>
+
 		<section id="contact">
 			<h2>Contact</h2>
 			<p>Reach me at 
