alignment and floats

--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -25,7 +25,7 @@
 	<div class="wrapper">	
 		<section id="about">
 			<h2>About</h2>
-			<p>Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
+			<p class="description">Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
 			<ul>
 				<li>Product Strategy</li>
 				<li>User Research</li>
@@ -41,48 +41,50 @@
 				<li>Front-End Code</li>
 			</ul>
 		</section>
+
 		<section id="work" class="clearfix">
 			<h2>Work</h2>
-			<article id="proj1">
+			<section id="project">
 				<h3>Coldwell Banker</h3>
 					<div id="projectborder">
 						<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
 						<a href="#" class="secondarybutton">See Project</a>
 					</div>
-			</article>
+			</section>
 
-			<article id="proj2"> 
+			<section id="project"> 
 				<h3>Liquid Lab</h3>
 				<div id="projectborder">
 					<p>A website that provides quick access to juice recipes and information for health conscious users for juice recipes and information.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
-			</article>
+			</section>
 
-			<article id="proj3">
+			<section id="project">
 				<h3>Dot Dash 3</h3>
 				<div id="projectborder">
 					<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
-			</article>
+			</section>
 
-			<article class="proj4">
+			<section id="project">
 				<h3>Instagram Print</h3>
 				<div id="projectborder">
-					<p>A reinvisioning of Instagram to include a print feature.</p>
+					<p>A reinvisioning of Instagram to include a print feature. Parrallelizing the monetary value of the app while not deterring from the main social value.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
-			</article>
+			</section>
 
 			<section id="downloads" class="clearfix">
 				<h2>Downloads</h2>
-				<p>Download full pdf <a href="#">here</a>.</p>
+				<p class="description">Download full pdf <a href="#">here</a>.</p>
 			</section>
-	
+		</section>
+
 		<section id="contact">
 			<h2>Contact</h2>
-			<p>Reach me at 
+			<p class="description">Reach me at 
 			<a href="www.linkedin.com" target="_blank">Linkedin</a>,
 			<a href="www.twitter.com" target="_blank">Twitter</a> or via
 			<a href="mustrockux@gmail.com" target="_blank">Email</a>
