adding images and animations

--- a/final_project/index.html
+++ b/final_project/index.html
@@ -27,7 +27,7 @@
 			<h2>About</h2>
 			<p class="description">Turning an idea into a product that people can use is the essence of what I do. I have over 5 years experience working as a User Experience Designer and a Product Designer. Understanding user journies and needs, as well as stakeholder goals, is essential to creating meaningful experiences. I thrive on collaboration, especially when it involves building ideas into tangible, interactive products.<br>My skills are:</p>
 			<ul>
-				<li>Product Strategy</li>
+				<li a href="Product Strategy">Product Strategy</li>
 				<li>User Research</li>
 				<li>Competitive Analysis</li>
 				<li>Sketching</li>
@@ -46,7 +46,7 @@
 			<h2>Work</h2>
 			<section id="project">
 				<h3>Coldwell Banker</h3>
-					<div id="projectborder">
+					<div class="projectborder">
 						<p>Digital Strategy for multi-platform interface for users to easily find, consume and share content, as well as provide access to associated CB links and tools.</p>
 						<a href="#" class="secondarybutton">See Project</a>
 					</div>
@@ -54,7 +54,7 @@
 
 			<section id="project"> 
 				<h3>Liquid Lab</h3>
-				<div id="projectborder">
+				<div class="projectborder">
 					<p>A website that provides quick access to juice recipes and information for health conscious users for juice recipes and information.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
@@ -62,15 +62,17 @@
 
 			<section id="project">
 				<h3>Dot Dash 3</h3>
-				<div id="projectborder">
-					<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
-					<a href="#" class="secondarybutton">See Project</a>
+				<div class="projectborder">
+					<div id="dot">
+						<p>Online collection of original art from international artists where users can browse and purchase art in a 3D environment called a virtual gallery.</p>
+						<a href="#" class="secondarybutton">See Project</a>
+					</div>
 				</div>
 			</section>
 
 			<section id="project">
 				<h3>Instagram Print</h3>
-				<div id="projectborder">
+				<div class="projectborder">
 					<p>A reinvisioning of Instagram to include a print feature. Parrallelizing the monetary value of the app while not deterring from the main social value.</p>
 					<a href="#" class="secondarybutton">See Project</a>
 				</div>
